fix: Content overflow hidden

--- a/src/components/newsCard.scss
+++ b/src/components/newsCard.scss
@@ -46,6 +46,7 @@
     width: 50%;
     padding: 25px 15px;
     text-align: left;
+    overflow: hidden;
 
     a {
       text-decoration: none;
